--- a/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/values.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/values.yaml
@@ -2,8 +2,9 @@ namePrefix: awesomecc
 name: gitlabdb
 namespace: "gitlab"
 region: eu-west-1
+engine: aurora-postgresql
 engineVersion: "16"
-size: small
+dbClusterInstanceClass: db.t2.medium
 storageGB: 10
 vpcId: rds_vpc_id
 vpcCidr: "0.0.0.0/0" 
@@ -18,3 +19,5 @@ autoMinorVersionUpgrade: false
 applyImmediately: false
 backupRetentionPeriod: 1
 preferredBackupWindow: 07:00-09:00
+storageEncrypted: true
+skipFinalSnapshot: true
