--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -35,6 +35,7 @@ crossplane_func_pat_version: "0.2.1"
 k8s_crossplane_module_version: "0.11.4"
 velero_helm_version: "7.2.1"
 velero_plugin_version: "v1.10.1"
+coredns_localcache_version: "1.11.3"
 
 istio_egress_gateway_max_replicas: 5
 istio_proxy_log_level: warn
