--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -184,5 +184,6 @@ rook_ceph_volume_size_per_osd: "500Gi"
 rook_ceph_mon_volumes_size: "10Gi"
 rook_ceph_osd_volumes_storage_class: "gp3"
 rook_ceph_mon_volumes_storage_class: "gp3"
+rook_ceph_cloud_pv_reclaim_policy: "Delete" # Retain, Delete
 rook_ceph_object_store_region: "us-east-1"
-rook_ceph_volumes_provider: "ebs" # ebs , host
+rook_ceph_volumes_provider: "host" # host, pvc
