--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/pvc/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/pvc/rook-ceph-cluster-values.yaml
@@ -185,14 +185,14 @@ cephBlockPools:
 
 # -- Settings for the filesystem snapshot class
 cephFileSystemVolumeSnapshotClass:
-  enabled: "${ARGOCD_ENV_enable_cephfs_vol_snap_class}"
+  enabled: false
   name: ceph-filesystem
   isDefault: false
   deletionPolicy: Delete
 
 # -- Settings for the block pool snapshot class
 cephBlockPoolsVolumeSnapshotClass:
-  enabled: "${ARGOCD_ENV_enable_block_pools_vol_snap_class}"
+  enabled: true
   name: ceph-block
   isDefault: true
   deletionPolicy: Delete
