Rook Snapshotclass changes

--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/pvc/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/pvc/rook-ceph-cluster-values.yaml
@@ -192,7 +192,7 @@ cephFileSystemVolumeSnapshotClass:
 
 # -- Settings for the block pool snapshot class
 cephBlockPoolsVolumeSnapshotClass:
-  enabled: true
+  enabled: false
   name: ceph-block
   isDefault: true
   deletionPolicy: Delete
