--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/pvc/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/pvc/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - volumes-storageclass.yaml
+  - ceph-cluster-cr.yaml
 
 helmCharts:
   - name: aws-ebs-csi-driver
@@ -9,10 +10,3 @@ helmCharts:
     repo: https://kubernetes-sigs.github.io/aws-ebs-csi-driver
     namespace: kube-system
     valuesFile: aws-ebs-csi-driver-values.yaml
-
-  - name: rook-ceph-cluster
-    releaseName: rook-ceph-cluster
-    version: ${ARGOCD_ENV_rook_ceph_helm_version}
-    repo: https://charts.rook.io/release
-    valuesFile: rook-ceph-cluster-values.yaml
-    namespace: ${ARGOCD_ENV_rook_ceph_namespace}
