--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -49,6 +49,20 @@ spec:
             requests:
               cpu: 50m
               memory: 64Mi
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
+      path: gitops/applications/base/rook-ceph
+      plugin:
+        name: envsubst
+        env:
+          - name: rook_ceph_namespace
+            value: "${ARGOCD_ENV_utils_rook_ceph_namespace}"
+
+          - name: "rook_ceph_helm_version"
+            value: "${ARGOCD_ENV_utils_rook_ceph_helm_version}"
+
+          - name: rook_ceph_object_store_region
+            value: "${ARGOCD_ENV_utils_rook_ceph_object_store_region}"
 
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
