--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/ceph-cluster-crs.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/ceph-cluster-crs.yaml
@@ -2,9 +2,14 @@ apiVersion: ceph.rook.io/v1
 kind: CephCluster
 metadata:
   name: rook-ceph
-  namespace:  ${ARGOCD_ENV_rook_ceph_namespace}
+  namespace: ${ARGOCD_ENV_rook_ceph_namespace}
 spec:
+  dashboard:
+    enabled: true
+    prometheusEndpoint: http://prometheus-operated.monitoring.svc.cluster.local:9090
   mon:
+    count: 3
+    allowMultiplePerNode: false
     volumeClaimTemplate:
       spec:
         storageClassName: "${ARGOCD_ENV_ceph_osd_volumes_storage_class}-csi"
