--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - volumes-storageclass.yaml
-  - ceph-cluster-cr.yaml
+  - ceph-cluster-crs.yaml
 
 helmCharts:
   - name: aws-ebs-csi-driver
