--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -58,15 +58,12 @@ spec:
           - name: rook_ceph_namespace
             value: "${ARGOCD_ENV_utils_rook_ceph_namespace}"
 
-          - name: "rook_ceph_helm_version"
-            value: "${ARGOCD_ENV_utils_rook_ceph_helm_version}"
-
           - name: rook_ceph_object_store_region
             value: "${ARGOCD_ENV_utils_rook_ceph_object_store_region}"
 
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_gitlab_application_gitrepo_tag}
-      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_cloud_provider}/rook-ceph/${ARGOCD_ENV_utils_rook_ceph_volumes_provider}
+      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_cloud_provider}/rook-ceph-cluster/${ARGOCD_ENV_utils_rook_ceph_volumes_provider}
       plugin:
         name: envsubst
         env:
