--- a/gitops/applications/base/rook-ceph/storageclass.yaml
+++ b/gitops/applications/base/rook-ceph/storageclass.yaml
@@ -15,8 +15,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: ceph-filesystem
-  annotations: {}
-  storageclass.kubernetes.io/is-default-class: false
+  annotations:
+    storageclass.kubernetes.io/is-default-class: false
 provisioner: rook-ceph.cephfs.csi.ceph.com
 reclaimPolicy: Delete
 allowVolumeExpansion: true
@@ -37,7 +37,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: ceph-block
-  storageclass.kubernetes.io/is-default-class: true
+  annotations:
+    storageclass.kubernetes.io/is-default-class: true
 provisioner: rook-ceph.cephfs.csi.ceph.com  
 reclaimPolicy: Delete
 allowVolumeExpansion: true
