--- a/gitops/applications/base/rook-ceph/storageclass.yaml
+++ b/gitops/applications/base/rook-ceph/storageclass.yaml
@@ -16,7 +16,7 @@ kind: StorageClass
 metadata:
   name: ceph-filesystem
   annotations:
-    storageclass.kubernetes.io/is-default-class: false
+    storageclass.kubernetes.io/is-default-class: "false"
 provisioner: rook-ceph.cephfs.csi.ceph.com
 reclaimPolicy: Delete
 allowVolumeExpansion: true
@@ -38,7 +38,7 @@ kind: StorageClass
 metadata:
   name: ceph-block
   annotations:
-    storageclass.kubernetes.io/is-default-class: true
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: rook-ceph.cephfs.csi.ceph.com  
 reclaimPolicy: Delete
 allowVolumeExpansion: true
