add mgr into cephcluster spec

--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/ceph-cluster-crs.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/ceph-cluster-crs.yaml
@@ -11,6 +11,9 @@ spec:
   dashboard:
     enabled: true
     prometheusEndpoint: http://prometheus-operated.monitoring.svc.cluster.local:9090
+  mgr:
+    count: 2
+    allowMultiplePerNode: false
   mon:
     count: 3
     allowMultiplePerNode: false
