--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/host/ceph-cluster-crs.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/host/ceph-cluster-crs.yaml
@@ -8,6 +8,9 @@ spec:
     image: quay.io/ceph/ceph:v18.2.4
     allowUnsupported: false
   dataDirHostPath: /var/lib/rook
+  mgr:
+    count: 2
+    allowMultiplePerNode: false
   mon:
     count: 3
     allowMultiplePerNode: false
