--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -179,6 +179,7 @@ zitadel_pgdb_helm_version: "2.4.0"
 
 # rook ceph
 rook_ceph_helm_version: "1.15.5"
+rook_ceph_image_version: "v18.2.4"
 rook_ceph_mon_volumes_size: "10Gi"
 rook_ceph_osd_volumes_storage_class: "gp3"
 rook_ceph_mon_volumes_storage_class: "gp3"
