--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/ceph-cluster-crs.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/ceph-cluster-crs.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ${ARGOCD_ENV_rook_ceph_namespace}
 spec:
   cephVersion:
-    image: quay.io/ceph/ceph:v18.2.4
+    image: quay.io/ceph/ceph:${ARGOCD_ENV_ceph_image_version}
     allowUnsupported: false
   dataDirHostPath: /var/lib/rook
   dashboard:
