--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/aws-ebs-csi-driver-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/pvc/aws-ebs-csi-driver-values.yaml
@@ -28,7 +28,7 @@ node:
 controller:
   # The default filesystem type of the volume to provision when fstype is unspecified in the StorageClass.
   # If the default is not set and fstype is unset in the StorageClass, then no fstype will be set
-  replicaCount: 2
+  replicaCount: "${ARGOCD_ENV_csi_driver_replicas}"
   defaultFsType: ext4
   batching: true
   volumeModificationFeature:
