--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -91,6 +91,9 @@ spec:
           - name: rook_ceph_object_store_region
             value: "${ARGOCD_ENV_utils_rook_ceph_object_store_region}"
 
+          - name: csi_driver_replicas
+            value: "${ARGOCD_ENV_utils_rook_ceph_csi_driver_replicas}"
+
           - name: kubelet_dir_path
             value: "${ARGOCD_ENV_utils_rook_ceph_rook_csi_kubelet_dir_path}"
 
