--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/host/ceph-cluster-crs.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph-cluster/host/ceph-cluster-crs.yaml
@@ -14,9 +14,10 @@ spec:
   mon:
     count: 3
     allowMultiplePerNode: false
+  monitoring:
+    enabled: true
   dashboard:
     enabled: true
-    prometheusEndpoint: http://prometheus-operated.monitoring.svc.cluster.local:9090
   storage:
     useAllNodes: true
     useAllDevices: true
