--- a/gitops/argo-apps/base/rook-ceph.yaml
+++ b/gitops/argo-apps/base/rook-ceph.yaml
@@ -94,6 +94,9 @@ spec:
           - name: csi_driver_replicas
             value: "${ARGOCD_ENV_utils_rook_ceph_csi_driver_replicas}"
 
+          - name: objects_replica_count
+            value: "${ARGOCD_ENV_utils_rook_ceph_objects_replica_count}"
+
           - name: kubelet_dir_path
             value: "${ARGOCD_ENV_utils_rook_ceph_rook_csi_kubelet_dir_path}"
 
