--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 
 resources:
   - provider-config.yaml
-  - xr-definition.yaml
-  - composition.yaml
+  - xr-definition-rds.yaml
+  - composition-rds.yaml
