--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: aws-postgresql
+  name: rds-aurora-composition
   labels:
     provider: aws
-    db: postgresql
+    db: rds-aurora
     cluster: ${ARGOCD_ENV_cluster_name}
 spec:
   compositeTypeRef:
     apiVersion: infitx.org/v1alpha1
-    kind: DBInstance
+    kind: RDSAuroraDBInstance
   mode: Pipeline
   pipeline:
   - functionRef:
@@ -36,7 +36,7 @@ spec:
               region: eu-west-2
               subnetIds: []
             providerConfigRef:
-              name: crossplane-provider-config              
+              name: crossplane-provider-config
         patches:
         - type: PatchSet
           patchSetName: metadata
@@ -44,7 +44,7 @@ spec:
           toFieldPath: "spec.forProvider.region"
         - fromFieldPath: "spec.parameters.subnets"
           toFieldPath: "spec.forProvider.subnetIds"
-          
+
       - name: securityGroup
         base:
           apiVersion: ec2.aws.crossplane.io/v1beta1
@@ -55,7 +55,7 @@ spec:
               - fromPort: 5432
                 toPort: 5432
                 ipProtocol: tcp
-                ipRanges: 
+                ipRanges:
                     - cidrIp: "10.106.0.0/23"
               description: Security group for the db instance
               groupName: db-security-group
@@ -65,7 +65,7 @@ spec:
               - key: Name
                 value: db-security-group
             providerConfigRef:
-              name: crossplane-provider-config              
+              name: crossplane-provider-config
         patches:
         - type: PatchSet
           patchSetName: metadata
@@ -90,6 +90,10 @@ spec:
           kind: DBCluster
           spec:
             forProvider:
+              availabilityZones:
+                       - eu-west-2a
+                       - eu-west-2b
+                       - eu-west-2c
               allowMajorVersionUpgrade: false
               applyImmediately: false
               autoMinorVersionUpgrade: false
@@ -102,12 +106,9 @@ spec:
                 matchControllerRef: true
               masterUsername: masteruser
               databaseName: testdb
-              engine: postgres
+              engine: aurora-postgresql
               skipFinalSnapshot: true
-              publiclyAccessible: false
-              allocatedStorage: 200
-              storageType: io1
-              iops: 4000              
+                #publiclyAccessible: false
               masterUserPasswordSecretRef:
                 key: password
                 name: secretName
@@ -117,33 +118,30 @@ spec:
               namespace: dbnamespace
               name: dbsecret
 
+
         patches:
         - type: PatchSet
           patchSetName: metadata
-        - fromFieldPath: "spec.parameters.region"
-          toFieldPath: "spec.forProvider.region"
-        - fromFieldPath: spec.parameters.size
+        - fromFieldPath: spec.parameters.region
+          toFieldPath: spec.forProvider.region
+        - fromFieldPath: spec.parameters.dbClusterInstanceClass
           toFieldPath: spec.forProvider.dbClusterInstanceClass
-          transforms:
-          - type: map
-            map:
-              small: db.m5d.large
-              medium: db.m5d.2xlarge
-              large: db.m5d.8xlarge
         - fromFieldPath: spec.parameters.username
           toFieldPath: spec.forProvider.masterUsername
         - fromFieldPath: spec.parameters.dbName
           toFieldPath: spec.forProvider.databaseName
+        - fromFieldPath: spec.parameters.engine
+          toFieldPath: spec.forProvider.engine
         - fromFieldPath: spec.parameters.engineVersion
           toFieldPath: spec.forProvider.engineVersion
         - fromFieldPath: spec.parameters.storageGB
           toFieldPath: spec.forProvider.allocatedStorage
         - fromFieldPath: spec.parameters.storageType
           toFieldPath: spec.forProvider.storageType
-        - fromFieldPath: spec.parameters.storageIops
+        - fromFieldPath: spec.parameters.storageIops          
           toFieldPath: spec.forProvider.iops
         - fromFieldPath: spec.parameters.backupRetentionPeriod
-          toFieldPath: spec.forProvider.backupRetentionPeriod                               
+          toFieldPath: spec.forProvider.backupRetentionPeriod
         - fromFieldPath: spec.parameters.preferredBackupWindow
           toFieldPath: spec.forProvider.preferredBackupWindow
         - fromFieldPath: spec.parameters.allowMajorVersionUpgrade
@@ -151,7 +149,9 @@ spec:
         - fromFieldPath: spec.parameters.autoMinorVersionUpgrade
           toFieldPath: spec.forProvider.autoMinorVersionUpgrade
         - fromFieldPath: spec.parameters.applyImmediately
-          toFieldPath: spec.forProvider.applyImmediately      
+          toFieldPath: spec.forProvider.applyImmediately
+        - fromFieldPath: spec.parameters.skipFinalSnapshot
+          toFieldPath: spec.forProvider.skipFinalSnapshot
         - fromFieldPath: spec.parameters.passwordSecret.name
           toFieldPath: spec.forProvider.masterUserPasswordSecretRef.name
         - fromFieldPath: spec.parameters.passwordSecret.key
@@ -160,10 +160,52 @@ spec:
           toFieldPath: spec.forProvider.masterUserPasswordSecretRef.namespace
         - fromFieldPath: spec.claimRef.namespace
           toFieldPath: spec.writeConnectionSecretToRef.namespace
+        - fromFieldPath: spec.parameters.storageEncrypted
+          toFieldPath: spec.forProvider.storageEncrypted
         - fromFieldPath: spec.parameters.dbName
           toFieldPath: spec.writeConnectionSecretToRef.name
           transforms:
           - type: string
             string:
               type: Format
-              fmt: '%s-connection-secret'              
+              fmt: '%s-connection-secret'
+      - name: dbInstance1
+        base:
+          apiVersion: rds.aws.crossplane.io/v1alpha1
+          kind: DBInstance
+          spec:
+            forProvider:
+              dbClusterIdentifierSelector:
+                  matchControllerRef: true
+              dbInstanceClass: db.t3.medium
+              engine: aurora-postgresql
+              region: eu-west-1
+            providerConfigRef:
+              name: crossplane-provider-config
+        patches:
+        - fromFieldPath: spec.parameters.region
+          toFieldPath: spec.forProvider.region
+        - fromFieldPath: spec.parameters.dbClusterInstanceClass
+          toFieldPath: spec.forProvider.dbInstanceClass
+        - fromFieldPath: spec.parameters.engine
+          toFieldPath: spec.forProvider.engine
+      - name: dbInstance2
+        base:
+          apiVersion: rds.aws.crossplane.io/v1alpha1
+          kind: DBInstance
+          spec:
+            forProvider:
+              dbClusterIdentifierSelector:
+                  matchControllerRef: true
+              dbInstanceClass: db.t3.medium
+              engine: aurora-postgresql
+              region: eu-west-1
+            providerConfigRef:
+              name: crossplane-provider-config
+        patches:
+        - fromFieldPath: spec.parameters.region
+          toFieldPath: spec.forProvider.region
+        - fromFieldPath: spec.parameters.dbClusterInstanceClass
+          toFieldPath: spec.forProvider.dbInstanceClass
+        - fromFieldPath: spec.parameters.engine
+          toFieldPath: spec.forProvider.engine          
