--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: dbinstances.infitx.org
+  name: rdsdbinstances.infitx.org
 spec:
   group: infitx.org
   names:
-    kind: DBInstance
-    plural: dbinstances
+    kind: RDSDBInstance
+    plural: rdsdbinstances
   claimNames:
-    kind: DBInstanceClaim
-    plural: dbinstanceclaims
+    kind: RDSDBInstanceClaim
+    plural: rdsdbinstanceclaims
   versions:
   - name: v1alpha1
     served: true
@@ -36,10 +36,10 @@ spec:
                   engineVersion:
                     description: The DB version depends on the DB type and versions available in the selected provider.
                     type: string
-                  size:
-                    description: "Supported sizes: small, medium, large"
+                  dbClusterInstanceClass:
+                    description: "Db instance class"
                     type: string
-                    default: small
+                    default: db.t3.medium
                   storageGB:
                     description: "Storage size"
                     type: integer
@@ -70,6 +70,10 @@ spec:
                   storageIops:
                     description: The IOPS for storage
                     type: integer
+                  storageEncrypted:
+                    description: The type of storage
+                    type: boolean
+                    default: true                     
                   backupRetentionPeriod:
                     description: The number of days to retain backups for
                     type: integer
@@ -84,7 +88,11 @@ spec:
                     type: boolean
                   applyImmediately: 
                     description: Indicates that changes should be applied immediately
-                    type: boolean                            
+                    type: boolean 
+                  skipFinalSnapshot: 
+                    description: Indicates that final snapshot should be skipped before destroy
+                    type: boolean
+                    default: false                                                    
                   passwordSecret:
                     description: The secret reference to the password of the master user.
                     type: object
