--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
@@ -5,3 +5,5 @@ resources:
   - provider-config.yaml
   - xr-definition-rds.yaml
   - composition-rds.yaml
+  - xr-definition-rds-aurora.yaml
+  - composition-rds-aurora.yaml  
