--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -181,8 +181,8 @@ zitadel_db_storage_size: "5Gi"
 #Zitadel RDS specific
 zitadel_rds_engine: "aurora-postgresql"
 zitadel_rds_instance_class: "db.t3.medium"
-zitadel_rds_storage_encrypted: "true"
-zitadel_rds_skip_final_snapshot: "true"
+zitadel_rds_storage_encrypted: "'true'"
+zitadel_rds_skip_final_snapshot: "'true'"
 zitadel_db_backup_retention_period: "'1'"
 zitadel_db_preferred_backup_window: "07:00-09:00"
 zitadel_rds_postgres_storage_size: "'100'"
