--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -151,6 +151,7 @@ gitaly_storage_size: "10Gi"
 gitlab_postgres_rdbms_provider: "percona"
 #gitlab rds
 gitlab_rds_engine: "aurora-postgresql"
+gitlab_rds_engine_version: "'16'"
 gitlab_rds_instance_class: "db.t3.medium"
 gitlab_rds_storage_encrypted: true
 gitlab_rds_skip_final_snapshot: true
@@ -160,6 +161,7 @@ gitlab_db_storage_type: "io1"
 gitlab_db_storage_iops: "'5000'" 
 #praefect rds
 praefect_rds_engine: "aurora-postgresql"
+praefect_rds_engine_version: "'16'"
 praefect_rds_instance_class: "db.t3.medium"
 praefect_rds_storage_encrypted: true
 praefect_rds_skip_final_snapshot: true
@@ -180,6 +182,7 @@ zitadel_postgres_storage_size: "20Gi"
 zitadel_db_storage_size: "5Gi"
 #Zitadel RDS specific
 zitadel_rds_engine: "aurora-postgresql"
+zitadel_rds_engine_version: "'16'"
 zitadel_rds_instance_class: "db.t3.medium"
 zitadel_rds_storage_encrypted: "'true'"
 zitadel_rds_skip_final_snapshot: "'true'"
