--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -237,6 +237,9 @@ spec:
           - name: "rds_storage_encrypted"
             value: "${ARGOCD_ENV_gitlab_webdb_rds_provider_storage_encrypted}"
 
+          - name: "rds_engine_version"
+            value: "${ARGOCD_ENV_gitlab_webdb_rds_provider_engine_version}"               
+
           - name: "rds_skip_final_snapshot"
             value: "${ARGOCD_ENV_gitlab_webdb_rds_provider_skip_final_snapshot}" 
 
@@ -330,6 +333,9 @@ spec:
 
           - name: "rds_storage_encrypted"
             value: "${ARGOCD_ENV_gitlab_praefectdb_rds_provider_storage_encrypted}"
+
+          - name: "rds_engine_version"
+            value: "${ARGOCD_ENV_gitlab_praefectdb_rds_provider_engine_version}"            
 
           - name: "rds_skip_final_snapshot"
             value: "${ARGOCD_ENV_gitlab_praefectdb_rds_provider_skip_final_snapshot}"    
