--- a/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
@@ -16,7 +16,7 @@ spec:
   parameters:
     region: {{ .Values.region }}
     engine: {{ .Values.engine }}
-    engineVersion: {{ .Values.engineVersion }}
+    engineVersion: "{{ .Values.engineVersion }}"
     dbClusterInstanceClass: {{ .Values.dbClusterInstanceClass }}
     storageGB: {{ .Values.storageGB }}
     vpcId: {{ .Values.vpcId }}
