--- a/gitops/argo-apps/base/monitoring-post-config.yaml
+++ b/gitops/argo-apps/base/monitoring-post-config.yaml
@@ -94,6 +94,9 @@ spec:
         - name: "user_rbac_group"
           value: "${ARGOCD_ENV_monitoring_grafana_user_rbac_group}"
 
+        - name: "grafana_web_name"
+          value: "grafana"
+
         - name: "grafana_dns_subdomain"
           value: "${ARGOCD_ENV_monitoring_grafana_dns_subdomain}"
 
